# TTMRank

./: .gitignore  DEPLOY.md  cloudflare-worker.js  deploy-all.ps1  deploy.bat  deploy.ps1  deploy.sh  install-gh.ps1  package-lock.json  package.json  playwright.config.js  playwright.performance.config.js  push.bat  pyproject.toml  requirements.txt  start.bat  start.sh
.github/workflows/: deploy.yml  history-maintenance.yml  refresh.yml  schedule-refresh-07.yml  schedule-refresh-27.yml  schedule-refresh-47.yml  test.yml
app/: analysis.html  changes.html  fetcher.py  index.html  rankings.html  server.py  start.py  taptapmaker.html  universe.html  vendors.html
app/css/: analysis.css  base.css  changes.css  components.css  home.css  print.css  (+4 more)
cloudflare/: analytics-worker.js  scheduler-worker.js  schema.sql  wrangler.scheduler.toml.example  wrangler.toml.example
config/: vendor-overrides.json
docs/: change-intelligence.md  history-retention.md
scripts/: analysis-publication.mjs  build-analysis.mjs  build-page-bundles.mjs  build-site.mjs  build-visual.mjs  change-publication.mjs  check-page-bundles.mjs  check-visual-budget.mjs
tests/: __init__.py  test_change_state.py  test_changes.py  test_detail_cache.py  test_exporters.py  test_fetcher.py  test_fixture.py  test_history_client.py  test_history_maintenance_sql.py  test_metrics.py  test_models.py  test_non_hot_new.py  test_normalize.py  test_pipeline.py  test_server_security.py  test_tap_client.py  test_validators.py  test_vendor_registry.py  test_workflows.py
web-src/: change-map-pixi.js  universe-three.js
(+3075 files in other folders)
